--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
                 <li><b>Check in</b> <br> <span>Add dates</span> </li>
                 <li><b>Check out </b><br> <span>Add dates</span> </li>
                 <li><b>Guests </b><br> <span>Add guests</span> </li>
-                <li style="background-color:rgb(113, 8, 15); height: 17px;  border-radius: 22px; margin:10px;"><img src="images/Vector.png" height="16px" alt=""></li>
-            </ul>
+                <li id="search" style="background-color:rgb(113, 8, 15); height: 17px;  border-radius: 22px; margin:10px;"><img src="images/Vector.png" height="16px" alt=""></li>
+                
+</ul>
         </div>
 
         <div class="img">
@@ -83,10 +84,95 @@
             <img src="images/unsplash_qvO4yjZo-Mc.png" alt="">
         </div>
     </section>
-    <section class="shop">shop</section>
+    
+    <section class="shop">
+        <div>
+            <h5>Shop Airbnb <br> gift cards</h5>
+            <button>Learn More</button>
+        </div>
+        <img src="images/Gift Cards.png">
+    </section>
 
-    <section class="photo">Photo</section>
+    <section class="photo">
+        <img src="images/unsplash_SV3e7hGlVnc.png" alt="">
 
-   <footer class="footer">footer</footer>
+        <div>
+            <h5>Inspiration for future gateways</h5>
+            <ul>
+                    <li>Destinations for arts and culture</li>
+                    <li>Destinations for outdoor adventure</li>
+                    <li>Mountain cabins</li>
+                    <li>Beach destinations</li>
+                    <li>Popular destinations</li>
+                    <li>Unique Stays</li>
+            </ul>
+            <table>
+
+                <tr>
+                  <td><b>Phoenix</b> <br> Arizona</td>
+                  <td><b>Hot Springs</b>  <br> Arkansas</td>
+                  <td><b>Los Angeles</b>  <br> California</td>
+                  <td><b>San Diego</b>  <br> California</td>
+                </tr>
+
+              <tr>
+                  <td><b>Phoenix</b> <br> Arizona</td>
+                  <td><b>Hot Springs</b>  <br> Arkansas</td>
+                  <td><b>Los Angeles</b>  <br> California</td>
+                  <td><b>San Diego</b>  <br> California</td>
+                </tr>
+
+                <tr>
+                    <td><b>Phoenix</b> <br> Arizona</td>
+                    <td><b>Hot Springs</b>  <br> Arkansas</td>
+                    <td><b>Los Angeles</b>  <br> California</td>
+                    <td><b>San Diego</b>  <br> California</td>
+                  </tr>
+              </table>
+        </div>
+    </section>
+
+    <div class="line"></div>
+
+
+   <footer class="footer">
+        <ul>
+            <li><b>Support</b></li>
+            <li>Help Center</li>
+            <li>Safetly information</li>
+            <li>Cancellation options</li>
+            <li>Our COVID-19 Response</li>
+            <li>Supporting people with disabilties</li>
+            <li>Reporting a neighborhood concern</li>
+        </ul>
+
+        <ul>
+            <li><b>Community</b></li>
+            <li>Airbnb.org: disaster relief housing</li>
+            <li>Support: Afghan refugees</li>
+            <li>Celebrating diversity & belonging</li>
+            <li>Combating discriminatino</li>
+        </ul>
+        <ul>
+            <li><b>Hosting</b></li>
+            <li>Try hosting</li>
+            <li>AirCover: protection for Hosts</li>
+            <li>Explore hosting resources</li>
+            <li>Visit our community forum</li>
+            <li>How to host responsibly</li>
+        </ul>
+
+        <ul>
+            <li><b>About</b></li>
+            <li>Newsroom</li>
+            <li>Learn about new features</li>
+            <li>Letter from our founders</li>
+            <li>Careers</li>
+            <li>Investors</li>
+            <li>Airbnb Luxe</li>
+        </ul>
+   </footer>
+
+   <script src="script.js"></script>
 </body>
 </html>
