--- a/index.html
+++ b/index.html
@@ -29,11 +29,20 @@
 
         <div class="search">
             <ul>
-                <li><b>Location </b><br> <span>where are you going?</span> </li>
-                <li><b>Check in</b> <br> <span>Add dates</span> </li>
-                <li><b>Check out </b><br> <span>Add dates</span> </li>
-                <li><b>Guests </b><br> <span>Add guests</span> </li>
-                <li id="search" style="background-color:rgb(113, 8, 15); height: 17px;  border-radius: 22px; margin:10px;"><img src="images/Vector.png" height="16px" alt=""></li>
+                <li><b>Location</b>
+                    <input type="text" value="" id="loc" placeholder="Where are you going">
+                </li>
+                <li><b>Check in</b>
+                    <input type="text" value="" id="in" placeholder="Add Dates">
+                </li>
+                <li><b>Check Out</b>
+                    <input type="text" value="" id="out" placeholder="Add Dates">
+                </li>
+                <li><b>Guests</b>
+                    <input type="text" value="" id="guest" placeholder="Add guests">
+                </li>
+                <button id="btn"><li id="search" style="background-color:rgb(113, 8, 15); height: 17px;  border-radius: 22px; margin:10px;"><img src="images/Vector.png" height="16px" alt=""></li></button>
+                
                 
 </ul>
         </div>
