--- a/search.html
+++ b/search.html
@@ -44,9 +44,9 @@
         <button>Filters</button>
     </section>
 
-    <div class="container">  
-        <div class="row">
-            <div  class="cards">
+    <div class="container" id="cont">  
+        <div id="row" class="row">
+            <!-- <div  class="cards" >
                 <img src="images/unsplash_JYTWsPsIDcY.png" width="300px" height="250px" alt="">
                 <div>
                     <div class="heart">
@@ -102,11 +102,11 @@
                     </div>
                 </div>
 
-            </div>
+            </div> -->
         </div>   
             
             <div  class="map">map</div>
     </div>
-
+    <script src="search.js"></script>
 </body>
 </html>
