--- a/search.html
+++ b/search.html
@@ -44,68 +44,9 @@
         <button>Filters</button>
     </section>
 
-    <div class="container" id="cont">  
-        <div id="row" class="row">
-            <!-- <div  class="cards" >
-                <img src="images/unsplash_JYTWsPsIDcY.png" width="300px" height="250px" alt="">
-                <div>
-                    <div class="heart">
-                        <p>Entire Home Bordeaux <br><b style="font-size: 20px;">Bordeaux Getaway</b></p>
-                        <img src="images/icons8-heart-50.png" id="he" width="16px" height="20px" alt="">
-                    </div>
-                    <div class="text">
-                        <p>4-6 guests Entire home 5 beds 3 bath <br> wifi . kitchen . Free parking</p>
-                    </div>
-                    <div id="las">
-                        <p>5.0</p>
-                        <img src="images/icons8-star-50.png" width="18px" alt="">
-                        <p>(318 reviews)</p>
-                        <p id="aa"><b>$325 /night</b></p>
-                    </div>
-                </div>
-
-            </div>
-            <div  class="cards">
-                <img src="images/unsplash_JYTWsPsIDcY.png" width="300px" height="250px" alt="">
-                <div>
-                    <div class="heart">
-                        <p>Entire Home Bordeaux <br><b style="font-size: 20px;">Bordeaux Getaway</b></p>
-                        <img src="images/icons8-heart-50.png" id="he" width="16px" height="20px" alt="">
-                    </div>
-                    <div class="text">
-                        <p>4-6 guests Entire home 5 beds 3 bath <br> wifi . kitchen . Free parking</p>
-                    </div>
-                    <div id="las">
-                        <p>5.0</p>
-                        <img src="images/icons8-star-50.png" width="18px" alt="">
-                        <p>(318 reviews)</p>
-                        <p id="aa"><b>$325 /night</b></p>
-                    </div>
-                </div>
-
-            </div>
-            <div  class="cards">
-                <img src="images/unsplash_JYTWsPsIDcY.png" width="300px" height="250px" alt="">
-                <div>
-                    <div class="heart">
-                        <p>Entire Home Bordeaux <br><b style="font-size: 20px;">Bordeaux Getaway</b></p>
-                        <img src="images/icons8-heart-50.png" id="he" width="16px" height="20px" alt="">
-                    </div>
-                    <div class="text">
-                        <p>4-6 guests Entire home 5 beds 3 bath <br> wifi . kitchen . Free parking</p>
-                    </div>
-                    <div id="las">
-                        <p>5.0</p>
-                        <img src="images/icons8-star-50.png" width="18px" alt="">
-                        <p>(318 reviews)</p>
-                        <p id="aa"><b>$325 /night</b></p>
-                    </div>
-                </div>
-
-            </div> -->
-        </div>   
-            
-            <div  class="map">map</div>
+    <div class="container" id="cont">
+            <div id="first"></div>
+            <div id="map">Map</div>
     </div>
     <script src="search.js"></script>
 </body>
