--- a/search.html
+++ b/search.html
@@ -46,8 +46,10 @@
 
     <div class="container" id="cont">
             <div id="first"></div>
-            <div id="map">Map</div>
+            <div id="map" style="height: 400px; width: 500px;">Map</div>
     </div>
     <script src="search.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCbgCcT2IjO1IUXXjx8G33sV_T7en6eSYA&libraries=places&callback=initMap" async defer></script>
+
 </body>
 </html>
