--- a/search.html
+++ b/search.html
@@ -11,10 +11,10 @@
             <img src="images/Vector (1).png" alt="">
 
             <div class="center">   
-                    <button>Bordeaux</button>
-                    <button>Feb 19-26</button>
-                    <button>2 guests</button>
-                    <button style="background-color: rgb(222, 49, 81); border-radius: 25px; height: 25px; width: 25px;"><img src="images/Vector.png" alt=""></button>
+                    <input id="place" value="">
+                    <input id="dat" type="date"  pattern="\d{4}-\d{2}-\d{2}" value="" >
+                    <input id="gue" value="">
+                    <button id="btn" style="background-color: rgb(222, 49, 81); border-radius: 25px; height: 25px; width: 25px;"><img src="images/Vector.png" alt=""></button>
             </div>
 
             <div class="last">
