--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <section class="header">
         <nav>
-            <img src="images/Logo.png" alt="" height="23px">
+            <img id="ss" src="images/Logo.png" alt="" height="23px">
 
             <ul id="one">
                 <li>Places to stay</li>
@@ -33,10 +33,10 @@
                     <input type="text" value="" id="loc" placeholder="Where are you going">
                 </li>
                 <li><b>Check in</b>
-                    <input type="text" value="" id="in" placeholder="Add Dates">
+                    <input type="date" pattern="\d{4}-\d{2}-\d{2}" value="" id="in" placeholder="Add Dates">
                 </li>
                 <li><b>Check Out</b>
-                    <input type="text" value="" id="out" placeholder="Add Dates">
+                    <input type="date" pattern="\d{4}-\d{2}-\d{2}" value="" id="out" placeholder="Add Dates">
                 </li>
                 <li><b>Guests</b>
                     <input type="text" value="" id="guest" placeholder="Add guests">
