--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
 
         <div class="img">
-            <img src="images/Big Card.png" alt="">
+            <img src="images/Big Card.png" id="jj" alt="">
         </div>
     </section>
 
